<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>rowDialog</class>
 <widget class="QDialog" name="rowDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>217</width>
    <height>104</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>217</width>
    <height>104</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>217</width>
    <height>104</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>添加方式选择</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0" colspan="2">
      <widget class="QRadioButton" name="radioButton_beforerow">
       <property name="text">
        <string>选中行之前</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0" colspan="2">
      <widget class="QRadioButton" name="radioButton_afterrow">
       <property name="text">
        <string>选中行之后</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QPushButton" name="pushButton_ok">
       <property name="text">
        <string>确定</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QPushButton" name="pushButton_cancel">
       <property name="text">
        <string>取消</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>pushButton_ok</sender>
   <signal>clicked()</signal>
   <receiver>rowDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>48</x>
     <y>65</y>
    </hint>
    <hint type="destinationlabel">
     <x>52</x>
     <y>82</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pushButton_cancel</sender>
   <signal>clicked()</signal>
   <receiver>rowDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>136</x>
     <y>72</y>
    </hint>
    <hint type="destinationlabel">
     <x>147</x>
     <y>84</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
